--- a/BlogSystem/BlogSystem/BlogSystem.csproj
+++ b/BlogSystem/BlogSystem/BlogSystem.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Posts\Details.cshtml" />
     <Content Include="Views\Posts\Edit.cshtml" />
     <Content Include="Views\Posts\Index.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
