Fixed navigation bar

--- a/BlogSystem/BlogSystem/BlogSystem.csproj
+++ b/BlogSystem/BlogSystem/BlogSystem.csproj
@@ -216,8 +216,6 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\aspnet-BlogSystem-20160828024206.mdf" />
-    <Content Include="App_Data\aspnet-BlogSystem-20160828024206_log.ldf" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -280,7 +278,9 @@
     <Content Include="Views\Posts\Index.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
